--- a/report.qmd
+++ b/report.qmd
@@ -266,7 +266,7 @@ combined_plot <- australia_plot +
        x = "Longitude", 
        y = "Latitude", 
        subtitle = "1987 - Present") +
-  theme_minimal()
+  theme_classic()
 
 combined_plot +
   geom_point(
@@ -518,7 +518,7 @@ weeping_mulla_mulla <- weeping_mulla_mulla %>%
 
 As we know, the spatial variables between Tourism and Occurences data are presented by `Region` and `longitude` & `latitude`, respectively. It is not possible to just join the data based on the value of these variables, so some data transformations are needed. Looking at the extraction code (given) for Tourism data and researching TRA's website [here](https://www.tra.gov.au/en/regional/tourism-regions.html), we have got the idea that `Region` variable is the area level of the Statistical Area 2 (SA2). The SA2 is part of the main structure of the Australian Statistical Geography Standard (ASGS) Edition 3, meaning we can use its shapefile and extract the geometry of every region in Australia (which contain longitude & latitude values). We will match the `geometry` in the SA2 data with `longitude` & `latitude` in the Occurences dataset to get the SA2 region name of each sighting. The code below will provide the step-by-step of the extraction process.
 
-```{r shapefile , warning = false, message = false}
+```{r shapefile , warning = FALSE, message = FALSE}
 # Get shapefile
 AU_region <- st_read(here::here("data/SA2_2021_AUST_SHP_GDA2020/SA2_2021_AUST_GDA2020.shp")) %>%
   ms_simplify(keep = 0.1) %>%
@@ -548,7 +548,7 @@ wmm_region <-
 ##### Join Temporal and Spatial Data
 
 Now, our Occurence data has matching region name with the region in the Tourism data, we also have transformed the format for temporal variables. Finally, We can start to join the temporal and spatial variables between these two datasets.
-```{r joined_data, warning = false, message = false}
+```{r joined_data, warning = FALSE, message = FALSE}
 # Finalising joined occurences & tourism weeping mulla mulla data
 wmm_tourism <- wmm_region %>%
                 left_join(tourism, by = c("region" = "Region", "Year_Quarter" = "Quarter")) %>%
@@ -574,7 +574,7 @@ To evaluate the spatial distribution of the species, a method involving
 the use of a map to pinpoint locations was employed. This was achieved
 by utilising the `spData` package in conjunction with its `world` data.
 
-```{r ,include=FALSE , warning = false, message = false}
+```{r ,include=FALSE , warning = FALSE, message = FALSE}
 #| include: false
 temperature <- tennant_creek_airport %>%
   left_join(weeping_mulla_mulla, by = c("date" = "eventDate")) %>%
@@ -582,7 +582,7 @@ temperature <- tennant_creek_airport %>%
   mutate(sighting = ifelse(lga == "Barkly ", 1, 0))
 ```
 
-```{r , warning = false, message = false}
+```{r , warning = FALSE, message = FALSE}
 #| label: fig-plots3
 #| fig-cap: "Weeping Mulla Mulla Sightings Across Australia"
 #| fig-align: center
@@ -601,7 +601,7 @@ combined_plot <- australia_plot +
        x = "Longitude", 
        y = "Latitude", 
        subtitle = "1987 - Present") +
-  theme_minimal()
+  theme_classic()
 
 combined_plot
 ```
@@ -638,7 +638,7 @@ frequent, namely Western Australia and the Northern Territory. Now, when
 the data is subset by month, it becomes apparent that these two regions
 remain the primary clusters.
 
-```{r, echo = FALSE ,warning = false, message = false}
+```{r, echo = FALSE ,warning = FALSE, message = FALSE}
 #| label: fig-plots4
 #| fig-cap: "Weeping Mulla Mulla Sightings By Month"
 #| fig-align: center
@@ -657,7 +657,7 @@ To test the validity of our visual inference, we decided to employ
 -   $H_1:$ There is a difference in the distribution of geographical
     points between the "Active" months and the "Others" months.
 
-```{r, echo=FALSE , warning = false, message = false}
+```{r, echo=FALSE , warning = FALSE, message = FALSE}
 #| label: fig-plots5
 #| fig-cap: "Weeping Mulla Mulla Sightings Null Plots"
 #| fig-align: center
@@ -725,7 +725,7 @@ compared to the previous, we hypothesize that this effect is due to the
 proliferation of internet-of-things, allowing sightings to be reported
 with greater ease and more reliable reporting platforms/databanks.
 
-```{r, echo=FALSE, warning =FALSE}
+```{r, echo=FALSE, warning = FALSE, message = FALSE}
 #| label: fig-plots99
 #| fig-cap: "Weeping Mulla Mulla Observations by Year"
 #| fig-align: center
@@ -740,7 +740,7 @@ wrapper <- weeping_mulla_mulla %>%
     title = "Weeping Mulla Mulla Observations by Year",
     y = "Number of observations"
   ) +
-  theme_minimal() +
+  theme_classic() +
   theme(legend.position = "none", legend.title = element_blank())
 ggplotly(wrapper)
 ```
@@ -754,7 +754,7 @@ occurrences by month. While there are some indications from the previous
 considerably more observation points, we would like create a bar plot
 for a better visualization inference.
 
-```{r , warning = false, message = false}
+```{r , warning = FALSE, message = FALSE}
 #| label: fig-plots6
 #| fig-cap: "Weeping Mulla Mulla Observations by Month (Bars)"
 #| fig-align: center
@@ -772,7 +772,7 @@ wrapper1 <- weeping_mulla_mulla %>%
     y = "Number of observations",
     x = "Month"
   ) +
-  theme_minimal() +
+  theme_classic() +
   theme(legend.position = "none", legend.title = element_blank())
 ggplotly(wrapper1)
 ```
@@ -798,7 +798,7 @@ source. To test our this expectation, we deploy a `leaflet` map, which
 displays geographical features such as subsurface water, creeks, lakes,
 and rivers.
 
-```{r , warning = false, message = false}
+```{r , warning = FALSE, message = FALSE}
 #| label: fig-plots7
 #| fig-cap: "Habitat Map Of Weeping Mulla Mulla Distribution"
 #| fig-align: center
@@ -819,7 +819,7 @@ The map is seen in the @fig-plots7, but due to the zoom level, we could
 not see the water body features of the map; Therefore, we decided to
 investigate a cluster of sightings near Ali Curung.
 
-```{r , warning = false, message = false}
+```{r , warning = FALSE, message = FALSE}
 #| label: fig-plots8
 #| fig-cap: "Habitat Map Of Weeping Mulla Mulla Distribution(Ali Curung, Barkly)"
 #| fig-align: center
@@ -851,7 +851,7 @@ allows us to investigate the relation between precipitation and sighting
 directly, resulting in the graph below which visualizes annual average
 rainfall and annual sightings.
 
-```{r echo=FALSE , warning = false, message = false}
+```{r echo=FALSE , warning = FALSE, message = FALSE}
 #| label: fig-plots9
 #| fig-cap: "Sighting Count and Average Precipitation by Year \n(Barkly and Tennant Creek Station)"
 #| fig-align: center
@@ -1016,7 +1016,7 @@ Before we dive deep into the correlation analysis of occurences and tourism, we 
 
 The chart below provide an information about the trend of tourism in Barkly Region.
 
-```{r trend, message = false, warning = false}
+```{r tourist-trend, warning = FALSE, message = FALSE , echo=FALSE}
 
 time_series_plot <- tourism %>%
   filter(Region == "Barkly",
@@ -1028,7 +1028,7 @@ time_series_plot <- tourism %>%
   geom_point(size = 2, color = "maroon", aes(text = paste("Year & Quarter: ", Quarter, "<br>Total Trips ('000): ", Total_Trips))) +
   labs(x = "Year and Quarter",
        y = "Total Trips") +
-  theme_minimal() +
+  theme_classic() +
   theme(plot.title = element_text(hjust=0.5, face = "bold"),
           plot.subtitle = element_text(hjust=0.5, face = "italic", size = 10))
 
@@ -1057,7 +1057,7 @@ Let's now move deeper by looking at the trend on quarterly basis. By considering
 
 The location of Barkly Region that is in the middle of the desert may also have a contribution to the number of tourism. Our intuition define a desert area will be very hot during summer, which make it a less suitable place to visit. It will be more suitable in the other season, hence probably one of the factor behind why it is a popular place to visit in Q3 (according to figure ....). In the graph below, we will try to prove our intuiton by utilising the weather station data that has temperature data.
 
-```{r trend, message = false, warning = false}
+```{r trend, warning = FALSE, message = FALSE, echo = FALSE }
 
 qtr_tourism <- tourism %>%
                 mutate(Quarter_oth = lubridate::quarter(Quarter)) %>%
@@ -1078,7 +1078,7 @@ qtr_tourism <- tourism %>%
                         subtitle = "Region : Barkly") +
                 labs(x = "Quarter",
                      y = "Total Trips ('000)") +
-                theme_minimal() +
+                theme_classic() +
                 theme(plot.title = element_text(hjust=0.5, face = "bold"),
                       plot.subtitle = element_text(hjust=0.5, face = "italic", size = 10),
                       aspect.ratio = 0.7)
@@ -1095,7 +1095,7 @@ qtr_temp <- tca_cb %>% face_temporal() %>%
                         subtitle = "Region : Barkly") +
                 labs(x = "Date",
                      y = "Avg. Temperature") +
-                theme_minimal() +
+                theme_classic() +
                 theme(plot.title = element_text(hjust=0.5, face = "bold"),
                       plot.subtitle = element_text(hjust=0.5, face = "italic", size = 10),
                       aspect.ratio = 0.5)
@@ -1117,7 +1117,7 @@ grid.arrange(qtr_tourism, qtr_temp, ncol = 2)
 
 Now we are going to look at how the tourism activities varies across multiple categories, including holidays, business activities, leisurely visits, and other significant reasons. By looking at this spectrum, we will be able to gain valuable insights into what sort of activities that tourist intended to do in Barkly region, helping us to shape our understanding towards this analysis in general. The graph below will provide us with such information.
 
-```{r quarter-trend, warning = FALSE ,  message = FALSE}
+```{r quarter-trend, warning = FALSE ,  message = FALSE,echo = FALSE}
 
 temporal_plot <- tourism %>%
                   filter(Region == "Barkly",
@@ -1132,7 +1132,7 @@ temporal_plot <- tourism %>%
                     y = "Trips",
                     color = "Purpose"
                   ) +
-                  theme_minimal() +
+                  theme_classic() +
                   facet_wrap(~ Purpose, scales = "free") +
                   scale_color_brewer(palette = "Set1") +
                   geom_smooth(method = "loess", se = FALSE)
@@ -1160,7 +1160,7 @@ Before we employ data analysis to reveal any insights regarding this topic, we p
 
 Now, We move on into the data analysis part. Firstly, we narrow down the necessary data related to eco-tourism interest of Weeping Mulla Mulla by filtering out Trips with "Holiday" purpose only. We assume that people who has spotted and reported the occurences are on their vacation, hence the selection of variable `Purpose` plays a role here.
 
-```{r Ecotourism, message = FALSE, warning = FALSE}
+```{r Ecotourism, message = FALSE, warning = FALSE, echo = FALSE}
 
 # Narrow down the trip purpose & Barkly Region
 wmm_tourism_holiday <- wmm_tourism %>% 
@@ -1200,7 +1200,7 @@ Through a visual representation of number of tourist to number of sightings from
 
 Our current data doesn't provide enough support to solidify this connection, and it remains inconclusive whether the influx of visitors to Barkly was partially driven by the prominence of the Weeping Mulla Mulla. A more detailed perspective can be gained by examining the subsequent map, which will place Weeping Mulla Mulla's sightings with the number of trips to this regions. 
 
-```{r barkly_map, warning=FALSE, message=FALSE}
+```{r barkly_map, warning=FALSE, message=FALSE ,echo = FALSE}
 # Mapping occurences and trips tp Weeping Mulla Mulla areas
 AU_region_subset <- AU_region %>%
                       st_crop(xmin = 131, xmax = 139, 
@@ -1223,7 +1223,7 @@ map_p1 <- wmm_tourism_holiday %>%
                   plot.subtitle = element_text(hjust=0.5, face = "italic", size = 10))
 ```
 
-```{r wholemap, warning=FALSE, message=FALSE}
+```{r wholemap, warning=FALSE, message=FALSE ,echo = FALSE}
 # Mapping occurences and trips tp Weeping Mulla Mulla areas
 AU_region_subset_2 <- AU_region %>%
                       st_crop(xmin = 115, xmax = 139, 
